3.Semantic.Analysis/test/semanal/error/error4_1_2_2.mod
module re_dec;

procedure f(a : integer);
var a : boolean;
begin

end f;

begin

end re_dec.
